# oxide

./: Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  event.rs  filesbuffers.rs  main.rs  ui.rs
