[package]
name = "oxide"
version = "0.1.0"
description = "Code Editor in Rust (References iron oxide aka rust)"
authors = ["jackcat13 <christophehenry11@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
clap = { version = "4.5.41", features = ["derive", "unicode"] }
chrono = "0.4.41"
